# mnist_led

./: .env.template  .gitignore  LeNet.py  README.md  SimpleNeuralNetworkVisualizer.py  config.py  download_mnist.sh  eval.py  eval_simplenetwork.py  main.py  pyproject.toml  train.py  train_simplenetwork.py  visualize_inference.py
GUI_Interface/: visualize_lenet.py  visualize_mlp.py  visualize_simple_nn.py
cppcode/: readme.md
cppcode/src/: main.cpp  mnist_loader.cpp  mnist_loader.h  neural_network.cpp  neural_network.h
eval/: evaluate_lenet.py  evaluate_mlp_nn.py  evaluate_simple_nn.py
pythoncode/: pyproject.toml
pythoncode/src/pythoncode/: config.py
pythoncode/src/pythoncode/network/: MLPNetwork.py  SimpleNeuralNetwork.py
pythoncode/src/pythoncode/training/: evaluator.py  trainer.py
pythoncode/src/pythoncode/visual/: led_widget.py  neural_visualizer.py  neuron_layer_widget.py
train/: train_lenet.py  train_mlp_nn.py  train_simple_nn.py
