[project]
name = "pythoncode"
version = "0.1.0"
description = "Networks for MNIST"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools.package-dir]
"" = "src" 

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"